--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.76.3",
     "autoprefixer": "^10.4.20",
     "next": "14.2.23",
+    "next-sanity": "^9.8.59",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sanity": "^3.76.3",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@types/node": "^20",
